--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "bootstrap": "^5.1.3",
+    "eventsource": "^2.0.2",
     "glob-parent": "^6.0.2",
     "moment": "^2.29.3",
     "ngx-bootstrap": "^8.0.0",
